@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.416 2005/10/16 04:00:26 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.417 2005/10/16 20:34:49 agaffney Exp $
 
 *GLI-0.3 (5 Oct 2005)
+
+  16 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/handlers/WebGLIHandler.py:
+  URI browser
 
   16 Oct 2005; Preston Cody <codeman@gentoo.org>
   more updates to webgli.  stage selection.
